# mddb

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PKGBUILD  README.md  pyproject.toml  python-mddb.install
.github/workflows/: ci.yml
scripts/: check_version.py  prevent-master-commit.sh  prevent-master-push.sh
src/mddb/: __init__.py  _core.py  _index.py  _mcp.py  _merge.py  card.py  index.py  schema.sql
tests/: conftest.py  test_card.py  test_conflict.py  test_core.py  test_edit.py  test_mcp_editor.py  test_mcp_read.py  test_merge.py  test_merge_e2e.py  test_merge_rationale.py  test_transaction.py
