[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mddb"
version = "0.0.10"
description = "A YAML+markdown card substrate for agentic and human knowledge work"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Handley Research Group", email = "wh260@cam.ac.uk"}
]
keywords = ["knowledge", "agents", "yaml", "markdown", "substrate"]
dependencies = ["pyyaml>=6.0", "python-slugify>=8.0"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "pre-commit>=3.0", "tomli>=2.0"]

[project.scripts]
mcp-mddb = "mddb._mcp:mcp.run"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
extend-select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/mddb/_*.py" = ["D"]
"tests/*" = ["D"]
"scripts/*" = ["D"]

[project.urls]
Homepage = "https://github.com/handley-lab/mddb"
Repository = "https://github.com/handley-lab/mddb"
Issues = "https://github.com/handley-lab/mddb/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mddb = ["*.sql"]
